Fixed unity entry of package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "sbaier.zenject",
     "displayName": "SBaier Zenject",
     "version": "1.0.0",
-    "unity": "2019.3.7f1",
+    "unity": "2019.3.7",
     "description": "Custom Zenject Logic",
     "keywords": ["Zenject", "Logic"],
     "category": "Controllers",
